# model2vec-rs-api-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BENCHMARK_REPORT.md  Cargo.toml  DEBUGGING_STATUS.md  DEPLOY.md  DEPLOY_FIX.md  Dockerfile  Dockerfile.debug  FINAL_REPORT.txt  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  MODAL_WEBSERVER_BUG.md  PLAN.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  download_models.sh  run.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: docker-modal-publish.yml  docker-publish.yml
benchmark-artifacts/: BENCHMARK_PLAN.md  benchmark.sh  benchmark_results.txt  model_benchmark_results.txt  model_test_output.txt  test_models.sh
infra/modal/: .env.modal.example  ASYNC_POLLING_DEPLOYMENT.md  DEPLOYMENT_STRATEGY_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  MODAL.md  QUICK_START.md  docker-compose.yml  modal_deploy.py  modal_sandbox_deploy.py  setup_modal.sh
infra/modal/research/: DEPLOY_FIX.md  MODAL_DEPLOYMENT_RESEARCH.md  MODAL_IMPLEMENTATION_ROADMAP.md  MODAL_RESEARCH_INDEX.md  MODAL_SUBPROCESS_ANALYSIS.md  README.md  RESEARCH_COMPLETE.md  RESEARCH_SUMMARY.md
src/: lib.rs  main.rs
src/app/: auth.rs  mod.rs  models.rs  routes.rs
src/config/: mod.rs
src/vectorizer/: mod.rs
tests/: api.rs
